# basic_cpp_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
inc/: Hello.hpp
lib/libA/: CMakeLists.txt
lib/libA/inc/: HelloLibA.hpp
lib/libA/src/: HelloLibA.cpp
src/: Hello.cpp
